--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -83,3 +83,7 @@ span.nameProgect {
   /* font-weight: bold; */
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+div {
+  border: 1px solid darkgrey;
+}
