--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -86,6 +86,12 @@ label {
   border-radius: 50%;
 }
 
-.navbar{
-  margin-right: 60px;
+.task-tracking {
+  margin-left: 80px;  
 }
+
+.home-element{
+  margin-left: 20px;
+}
+
+
