--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -97,6 +97,7 @@ label {
 button.adding {
   margin-top: 20px;
   margin-right: 25px;
+  height: 40px;
 }
 
 div.task-card{
@@ -114,6 +115,17 @@ div.comments {
 div.comments-field {
   background-color: azure;
   width: 99,5%;
-  height: 91%;;
+  height: 91%;
 }
 
+div.tags-in-container{
+  text-align: center;
+  border-radius: 25%;
+  margin: 0px;
+  
+}
+
+.table{
+  text-align: center;
+  vertical-align: middle;
+}
