--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(252, 250, 251);
 }
 
 code {
@@ -27,15 +28,29 @@ code {
   }
 }
 
-/* .b-example-divider {
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
+.b-example-divider {
   height: 3rem;
   background-color: rgba(0, 0, 0, .1);
   border: solid rgba(0, 0, 0, .15);
   border-width: 1px 0;
   box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-} */
+}
 
-/* .b-example-vr {
+.b-example-vr {
   flex-shrink: 0;
   width: 1.5rem;
   height: 100vh;
@@ -62,7 +77,7 @@ code {
   text-align: center;
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
-} */
+}
 
 footer {
   position: fixed;
@@ -83,7 +98,20 @@ span.nameProgect {
   /* font-weight: bold; */
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-/* 
-div {
-  border: 1px solid darkgrey;
-} */
+
+div.header-of-user {
+  /* border: 1px solid ; */
+  margin-left: 0px;
+  padding-left: 0px;
+}
+
+img.avatar {
+  height: 40px;
+  width: 40px;
+  border-radius: 25%;
+}
+
+div.task-description {
+  /* border: 1px black solid; */
+  padding-left: 25px;
+}
