--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -140,13 +140,62 @@ div.task-description {
   padding-right: 15px;
 }
 
-.comment-text{
+.comment-text {
   padding: 15px;
   word-wrap: break-word;
   width: 100%;
+  background-color: white;
+  color: black;
 }
 
 .avatar-comment {
   width: 65px;
 }
 
+.comment-reaction {
+  /* width: px; */
+  /* padding-right: 15px;
+  padding-left: 15px; */
+  /* margin-left: 15px; */
+  /* margin-right: 15px; */
+  margin-left: auto;
+  margin-right: auto;
+  vertical-align: middle
+}
+
+.comment-meta {   
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color: rgb(64, 106, 107);
+}
+
+.btn-group-emoji button {
+  background-color: transparent; /* Green background*/
+  border: 1px solid rgb(252, 252, 252); 
+  color: black; /* White text */
+  padding: 2px 8px; /* Some padding */
+  cursor: pointer; /* Pointer/hand icon */
+  float: left; /* Float the buttons side by side */
+}
+
+.btn-group-emoji button:not(:last-child) {
+  border-right: none; /* Prevent double borders */
+}
+
+/* Clear floats (clearfix hack) */
+.btn-group-emoji:after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* Add a background color on hover */
+/* .btn-group-emoji button:hover {
+  background-color: #3e8e41;
+} */
+
+button.answer {
+  border: 1px solid gray;
+  background-color: ghostwhite;
+  color: gray;
+}
